--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -1,4 +1,4 @@
-name: Maven CI
+name: Maven CI/CD
 
 on:
   push:
@@ -10,6 +10,7 @@ on:
       runs-on: ubuntu-latest
 
       steps:
+      
         - name: Hacemos Checkout del repo de Git
         uses: actions/checkout@v2
 
