--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -2,24 +2,25 @@ name: Maven CI/CD
 
 on:
   push:
-    branches:
-      - 'Development'
+    branches: [ Development ]
 
-jobs:
+  jobs:
+    test_and_build:
 
-  test_and_build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Hacemos Checkout del repo de Git
+      runs-on: ubuntu-latest
+
+      steps:
+		
+        - name: Hacemos Checkuot del repo de Git
         uses: actions/checkout@v2
-
-      - name: Set up JDK 8
+		
+        - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      
-      - name: Test project with Maven
-        run: mvn -B test
 
-      - name: Build project with Maven
-        uses: mvn -B package        
+        - name: Test project with Maven
+        run: mvn -B test
+		  
+        - name: Build project with Maven
+        run: mvn -B package 
