--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -1,25 +1,26 @@
-name: Maven CI/CD
-
+name: example-custom-command
 on:
   push:
-    branches: [ Development ]
+    branches:
+      - 'master'
+  pull_request:
+  workflow_dispatch:
 
-  jobs:
-    test_and_build:
+jobs:
 
-      runs-on: ubuntu-latest
+  start:
+    # example where instead of forming the default "cypress run ..."
+    # the user can specify their own command
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout 🛎
+        uses: actions/checkout@v4
 
-      steps:
-        - name: Hacemos Checkuot del repo de Git
-        uses: actions/checkout@v2
-
-        - name: Set up JDK 8
-        uses: actions/setup-java@v1
+      - name: Custom tests 🧪
+        uses: ./
         with:
-          java-version: 8
+          command: npm run custom-test
+          working-directory: examples/custom-command
 
-        - name: Test project with Maven
-        run: mvn -B test
-
-        - name: Build project with Maven
-        run: mvn -B package
+      - name: Show saved file 🖨
+        run: cat examples/custom-command/results.json
