--- a/.github/workflows/mavenCICD.yml
+++ b/.github/workflows/mavenCICD.yml
@@ -10,9 +10,9 @@ jobs:
       - name: Hacemos Checkuot del repo de Git
         uses: actions/checkout@v4
       - name: Set up JDK-8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: 8
+          java-version: '21'
       - name: Test project with Maven
         run: mvn -B test
       - name: Build project with Maven
