--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -1,8 +1,10 @@
-name: Maven_CI/CD
+name: Maven CI/CD
 on:
   push:
     branches:
       - 'Development'
+  pull_request:
+  workflow_dispatch:
 
 jobs:
 
@@ -12,10 +14,10 @@ jobs:
       - name: Hacemos Checkuot del repo de Git
         uses: actions/checkout@v4
 
-      - name: Set up JDK-8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
         with:
-          java-version: 8
+          java-version: '21'
 
       - name: Test project with Maven
         run: mvn -B test
