--- a/.github/workflows/maven-CI.yml
+++ b/.github/workflows/maven-CI.yml
@@ -11,13 +11,13 @@ jobs:
   test_and_build:
     runs-on: ubuntu-latest
     steps:
-      - name: Hacemos Checkuot del repo de Git
-        uses: actions/checkout@v4
+      - name: Hacemos Checkuot del repo Git
+        uses: actions/checkout@v2
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v1
         with:
-          java-version: '21'
+          java-version: '8'
 
       - name: Test project with Maven
         run: mvn -B test
